# vollerei

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/abc/: game.md
docs/common/: functions.md
docs/game/launcher/: game.md
docs/genshin/: game.md
docs/hsr/: game.md  patcher.md  patchtype.md
docs/zzz/: game.md
vollerei/: __main__.py  constants.py  paths.py
vollerei/abc/: patcher.py
vollerei/abc/launcher/: game.py
vollerei/cli/: __init__.py  commands.py  genshin.py  hsr.py  utils.py
vollerei/common/: __init__.py  configfile.py  enums.py  functions.py  telemetry.py
vollerei/common/api/: __init__.py  resource.py
vollerei/exceptions/: __init__.py  game.py  patcher.py
vollerei/game/: patcher.py
vollerei/game/genshin/: functions.py
vollerei/game/hsr/: constants.py  functions.py
vollerei/game/launcher/: __init__.py  api.py  manager.py
vollerei/game/zzz/: functions.py
vollerei/genshin/: __init__.py
vollerei/genshin/launcher/: __init__.py  api.py  game.py
vollerei/hi3/: constants.py  patcher.py
vollerei/hi3/launcher/: enums.py  game.py
vollerei/hsr/: __init__.py  constants.py  patcher.py
vollerei/hsr/launcher/: __init__.py  api.py  enums.py  game.py
vollerei/utils/: __init__.py  linux.py
vollerei/utils/git/: __init__.py  exceptions.py
vollerei/utils/hdiffpatch/: __init__.py  exceptions.py
vollerei/utils/xdelta3/: __init__.py  exceptions.py
vollerei/zzz/: __init__.py
vollerei/zzz/launcher/: __init__.py  api.py  game.py
