[tool.poetry]
name = "vollerei"
version = "0.1.0"
description = "An open-source launcher for anime games"
authors = ["tretrauit <tretrauit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "^3.5.1"
requests = "^2.31.0"
cleo = "^2.1.0"
packaging = "^23.2"
py7zr = "^0.22.0"

[tool.poetry.group.cli]
optional = true

[tool.poetry.group.cli.dependencies]
tqdm = "^4.65.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pre-commit = "^3.3.3"


[tool.poetry.group.docs.dependencies]
mkdocstrings-python = "^1.12.2"
mkdocs-material = "^9.5.49"

[tool.poetry.scripts]
vollerei = 'vollerei.cli:run'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
